feat: add entity

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>Albaya Home</title>
 </head>
 <body>
-    <a th:href="@{/page2}":>
+    <a th:href="@{/join}":>
         <b>click</b>
     </a>
 </body>
