feat: add user login

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,17 @@
     <title>Albaya Home</title>
 </head>
 <body>
-    <a th:href="@{/join}":>
-        <b>click</b>
-    </a>
+    <table>
+        <tr>
+            <td>
+                <a th:href="@{/join}"> <b>회원가입</b></a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a th:href="@{/login}"> <b>로그인</b></a>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
