--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,15 +5,23 @@
     <title>Albaya Home</title>
 </head>
 <body>
+    <div th:if="${informDto.isLoginStatus()}">
+        <h1 th:text="${informDto.getName()}"></h1>
+    </div>
     <table>
         <tr>
             <td>
                 <a th:href="@{/join}"> <b>회원가입</b></a>
             </td>
         </tr>
-        <tr>
+        <tr th:if="${!informDto.isLoginStatus()}">
             <td>
                 <a th:href="@{/login}"> <b>로그인</b></a>
+            </td>
+        </tr>
+        <tr th:if="${informDto.isLoginStatus()}">
+            <td>
+                <a th:href="@{/logout}"> <b>로그아웃</b></a>
             </td>
         </tr>
     </table>
