--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -4,32 +4,78 @@
     <meta charset="UTF-8">
     <title>회원가입</title>
 </head>
+<th:block layout:fragment="css">
+    <link rel="stylesheet" href="/user/join.css" />
+</th:block>
+
 <body>
 <h1>회원가입</h1>
     <form th:action="@{/join}" th:method="post" th:object="${joinDto}">
-        <table>
-            <tr>
-                <td><label for="email">Email:</label></td>
-                <td><input type="email" id="email" th:field="*{email}" required/></td>
-            </tr>
-            <tr>
-                <td><label for="password">Password:</label></td>
-                <td><input type="password" id="password" th:field="*{password}" required/></td>
-            </tr>
-            <tr>
-                <td><label for="name">Name:</label></td>
-                <td><input type="text" id="name" th:field="*{name}" required/></td>
-            </tr>
-            <tr>
-                <td><label for="age">Age:</label></td>
-                <td><input type="number" id="age" th:field="*{age}" required/></td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button type="submit">가입하기</button>
-                </td>
-            </tr>
-        </table>
+        <div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" th:field="*{email}" required/>
+            <button type="button" onclick="checkId()">중복확인</button>
+            <span class="id_ok">사용 가능한 이메일 입니다.</span>
+            <span class="id_already">사용중인 이메일 입니다.</span>
+            <span class="not_email">이메일의 형태가 아닙니다.</span>
+        </div>
+        <div>
+            <label for="real_password">비밀번호</label>
+            <input type="password" id="real_password" th:field="*{real_password}" required/>
+        </div>
+        <div>
+            <label for="check_password">비밀번호확인</label>
+            <input type="password" id="check_password" th:field="*{check_password}" required/>
+        </div>
+        <div>
+            <label for="name">Name:</label>
+            <input type="text" id="name" th:field="*{name}" required/>
+        </div>
+        <div>
+            <label for="age">Age:</label>
+            <input type="number" id="age" th:field="*{age}" required/>
+        </div>
+        <div>
+            <button type="submit">가입하기</button>
+        </div>
     </form>
 </body>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script>
+    $(document).ready(function() {
+    let message = "[[${msg}]]";
+    if (message != "") {
+        alert(message);
+     }else {}
+    })
+
+    function checkId(){
+        var email = $('#email').val();
+        $.ajax({
+            url:'./emailCheck',
+            type:'post',
+            data:{email:email},
+            success:function(cnt){
+                if(cnt == 0){
+                    $('.id_ok').css("display","inline-block");
+                    $('.id_already').css("display", "none");
+                    $('.not_email').css("display", "none");
+                } else if (cnt == 1){
+                    $('.id_already').css("display","none");
+                    $('.id_ok').css("display", "none");
+                    $('.not_email').css("display", "inline-block");
+                }else{
+                    $('.id_already').css("display","inline-block");
+                    $('.id_ok').css("display", "none");
+                    $('.not_email').css("display", "none");
+                }
+            },
+            error:function(){
+                alert("에러입니다");
+            }
+        });
+        };
+</script>
 </html>
