--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -26,4 +26,14 @@
     </table>
 </form>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script>
+        $(document).ready(function() {
+        let message = "[[${msg}]]";
+        if (message != "") {
+            alert(message);
+         }else {}
+        })
+</script>
 </html>
