--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,14 @@
       layout:decorate="~{layouts/default_layout}">
 
 <th:block layout:fragment="content">
+    <div class="container-sm">
+        <div class="row">
+            <div class="col-7" id="map" style="width: 100%; height: 600px;"></div>
+        </div>
+    </div>
 
+    <!-- 네이버 지도 API 스크립트 -->
+    <script type="text/javascript" th:src="@{|https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=${naverMapClientId}&callback=initMap|}"></script>
+    <script type="text/javascript" th:src="@{/user/map.js}"> </script>
 </th:block>
 </html>
