feat: add store information beside map
1. map 옆에 store 정보 출력
2. store 클릭 하면 store 세부 페이지로 이동
3. footer 사이즈 증가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="footerFragment">
-  <div></div>
+  <div class="row">
+    <div col="col" style="width:100%; height:100px;"></div>
+  </div>
 </th:block>
 </html>
