--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,17 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
-
 <th:block layout:fragment="content">
-    <div class="container-sm">
+    <div class="container text-center" style="width: 100%;">
         <div class="row">
-            <div class="col-7" id="map" style="width: 100%; height: 600px;"></div>
+            <!-- 검색창과 상점 정보가 나오는 부분 -->
+            <div class="col-3 d-flex align-items-center justify-content-start">
+                <div id="store-list"></div>
+            </div>
+            <!-- 지도 부분 -->
+            <div class = "col d-flex align-items-center justify-content-center" id="map" style="width: 100%; height: 800px;"></div>
         </div>
     </div>
 
     <!-- 네이버 지도 API 스크립트 -->
     <script type="text/javascript" th:src="@{|https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=${naverMapClientId}&callback=initMap|}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" th:src="@{/user/map.js}"> </script>
+    <script type="text/javascript" th:src="@{/user/map.js}"></script>
+    <link rel="stylesheet" href="/user/home.css"/>
 </th:block>
 </html>
