--- a/src/main/resources/templates/store/detailStore.html
+++ b/src/main/resources/templates/store/detailStore.html
@@ -5,6 +5,9 @@
 <th:block layout:fragment="content">
     <div th:text="${storeDto.store_name}"></div>
     <div th:text="${storeDto.store_id}"></div>
+    <div>
+        <img th:src="@{/images/} + ${storeDto.image_url}" class="img-fluid"  width="200px" height ="120px">
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </th:block>
