refactor: change home.html content size 1. home.html contents width:100% 으로 변경

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
 <th:block layout:fragment="content">
-    <div class="container text-center" style="width: 100%;">
-        <div class="row">
+    <div class="container-fluid text-center" style="width: 100%;">
+        <div class="row" style="width: 100%;">
             <!-- 검색창과 상점 정보가 나오는 부분 -->
             <div class="col-3 d-flex align-items-center justify-content-start">
                 <div id="store-list"></div>
