refactor: Add header buttion 1. Header UI 정렬 2. 이력서 등록, 채용 공고 등록 버튼 추가

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headerFragment">
-<div class="container-sm">
-    <div class="row">
-        <div class="col-7">
-            <a th:href="@{/}">
-                <img th:src="@{/images/logo.png}" class="img-fluid"  width="200px" height ="120px">
-            </a>
-        </div>
+    <div class="container-fluid text-center head-container" style="width: 100%;">
+        <div class="row justify-content-end" style="width: 80%; height:150px;">
+            <div class="col-10 d-flex align-items-center justify-content-start">
+                <a th:href="@{/}">
+                    <img th:src="@{/images/logo.png}" class="img-fluid"  width="200px" height ="100px">
+                </a>
+            </div>
 
-        <div class="col d-flex align-items-center justify-content-center" th:if="${!informDto.isLoginStatus()}">
-            <a th:href="@{/login}"> <b>로그인</b></a>
-        </div>
+            <div class="col-1 d-flex align-items-center justify-content-center" th:if="${!informDto.isLoginStatus()}">
+                <a th:href="@{/login}"> <b>로그인</b></a>
+            </div>
 
-        <div class="col d-flex align-items-center justify-content-end" th:if="${informDto.isLoginStatus()}">
-            <b th:text="${informDto.getName()}">님</b>
-        </div>
+            <div class="col-1 d-flex align-items-center justify-content-end" th:if="${informDto.isLoginStatus()}">
+                <b th:text="${informDto.getName()}">님</b>
+            </div>
 
-        <div class="col d-flex align-items-center justify-content-center" th:if="${informDto.isLoginStatus()}">
-            <a th:href="@{/logout}"> <b>로그아웃</b></a>
+            <div class="col-1 d-flex align-items-center justify-content-center" th:if="${informDto.isLoginStatus()}">
+                <a th:href="@{/logout}"> <b>로그아웃</b></a>
+            </div>
+        </div>
+        <div class ="row justify-content-end" style = "width: 80%; height:100px;">
+            <div class="col-1 d-flex flex-row-reverse">
+                <a th:href="@{/resume/register}"> <b>이력서 등록</b></a>
+            </div>
+            <div class="col-1 d-flex flex-row-reverse">
+                <a th:href="@{/jobpost/register}"> <b>채용 공고 등록</b></a>
+            </div>
         </div>
     </div>
-</div>
+    <link rel="stylesheet" href="/fragments/header.css"/>
 </th:block>
 </html>
