--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,13 +3,11 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
 <th:block layout:fragment="content">
-    <div class="container-fluid text-center" style="width: 100%;">
-        <div class="row" style="width: 100%;">
-            <!-- 검색창과 상점 정보가 나오는 부분 -->
+    <div class="container-fluid text-center head-container" style="width: 100%;">
+        <div class="row justify-content-end" style="width: 80%;">
             <div class="col-3 d-flex align-items-center justify-content-start">
                 <div id="store-list"></div>
             </div>
-            <!-- 지도 부분 -->
             <div class = "col d-flex align-items-center justify-content-center" id="map" style="width: 100%; height: 800px;"></div>
         </div>
     </div>
