--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,6 +16,14 @@
     <script type="text/javascript" th:src="@{|https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=${naverMapClientId}&callback=initMap|}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" th:src="@{/user/map.js}"></script>
+    <script>
+        $(document).ready(function() {
+            let message = "[[${logoutMessage}]]";
+            if (message != "") {
+                alert(message);
+            }
+        });
+</script>
     <link rel="stylesheet" href="/user/home.css"/>
 </th:block>
 </html>
