--- a/src/main/resources/static/fragments/header.css
+++ b/src/main/resources/static/fragments/header.css
@@ -1,7 +1,75 @@
-.head-container{
-   border-bottom: solid;
-   border-bottom-color:  #e0e0e0;
-   margin-bottom: 10px;
-   padding: 0;
+.head-container {
+    background-color: #F2F2F2;
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
 }
 
+.row {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.col-2, .col-8 {
+    display: flex;
+    align-items: center;
+}
+
+.col-2 {
+    justify-content: flex-start;
+}
+
+.col-8 {
+    justify-content: center;
+}
+
+.col-2:last-child {
+    justify-content: flex-end;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 500px; /* Increased width */
+}
+
+.search-bar input {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 20px 0 0 20px;
+    height: 50%;
+
+}
+
+.search-bar button {
+    background-color: #3F83BF;
+    border: none;
+    border-radius: 0 20px 20px 0;
+    padding: 5px 10px;
+    cursor: pointer;
+    height: 50%;
+}
+
+.search-bar button img {
+    width: 30px;
+    height: 50%;
+}
+
+.login-status, .user-info {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.login-status a, .user-info a {
+    margin-left: 10px;
+    text-decoration: none;
+    color: #000;
+}
+
+.login-status a:hover, .user-info a:hover {
+    text-decoration: underline;
+}
