fix: bug where stores within coordinates were not displaying
- 지도내에 존재하는 상점 안보이는 버그 수정
- default store image 추가
- 세부 상점 정보, 좌표 검색 상점 정보 DTO 분리

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="headFragment">
     <head>
         <link rel="stylesheet"  th:href="@{/css/bootstrap.css}" type="text/css"/>
-        <link rel="stylesheet"  th:href="@{/layout.css}" type="text/css"/>
+<!--        <link rel="stylesheet"  th:href="@{/layout.css}" type="text/css"/>-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
