--- a/src/main/resources/templates/store/upload_store.html
+++ b/src/main/resources/templates/store/upload_store.html
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="form-container">
         <div class="form-title">채용 공고 등록하기</div>
-        <form method="post" action="/owner/upload" enctype="multipart/form-data">
+        <form method="post" action="/owner/upload_store" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="storeName">Store Name</label>
                 <input type="text" class="form-control" id="storeName" name="storeName" required>
