--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,13 +20,13 @@
             </div>
 
             <div class="col-2 d-flex align-items-center justify-content-center">
-                <div class="login-status" th:if="${!informDto.isLoginStatus()}">
+                <div class="login-status" th:if="${!dto.isLoginStatus()}">
                     <a th:href="@{/login}"><b>로그인</b></a>
                     <a th:href="@{/join}"><b>회원가입</b></a>
                 </div>
 
-                <div class="user-info" th:if="${informDto.isLoginStatus()}">
-                    <b th:text="${informDto.getName()}">님</b>
+                <div class="user-info" th:if="${dto.isLoginStatus()}">
+                    <b th:text="${dto.getName()}">님</b>
                     <a th:href="@{/logout}"><b>로그아웃</b></a>
                 </div>
                 <div>
